WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267322
[Nicosia] Holepunch broken when media controls are enabled
https://bugs.webkit.org/show_bug.cgi?id=267322
Summary
[Nicosia] Holepunch broken when media controls are enabled
Loïc Yhuel
Reported
2024-01-10 01:19:51 PST
When the media controls are enabled, even briefly, the holepunch no longer works, unless the pages triggers enough changes to push a new buffer.
Attachments
Add attachment
proposed patch, testcase, etc.
Loïc Yhuel
Comment 1
2024-01-10 01:31:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22572
EWS
Comment 2
2024-01-11 01:59:31 PST
Committed
272907@main
(ed3ac4ca8604): <
https://commits.webkit.org/272907@main
> Reviewed commits have been landed. Closing PR #22572 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-01-11 02:00:18 PST
<
rdar://problem/120834484
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug